samples/_failures_safe/1761076472_3fc6a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_382500ea.c: In function ‘tokenize’:
./samples/SAFE/__tmp_382500ea.c:170:9: error: expected expression at end of input
  170 |         int parsed =
      |         ^~~
./samples/SAFE/__tmp_382500ea.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_382500ea.c:170:9: error: expected declaration or statement at end of input
